fixed header image and added images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Horiseon</title>
 </head>
 
@@ -24,7 +24,7 @@
             </ul>
         </header>
     </div>
-    <div class="hero"></div>
+    <div class="hero" title="Horiseon workers around a table working"></div>
     <div class="content">
         <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Shows image of desktop with a journal that has 
